--- a/layout.phtml
+++ b/layout.phtml
@@ -548,7 +548,7 @@
               </div>
   
               <main>
-              <button type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class=" btn_menu"   >Menu</button>
+              <!--<button type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class=" btn_menu"   >Menu</button>
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                             <div class="offcanvas-header">
                               <h5 id="offcanvasRightLabel">Menu</h5>
@@ -573,7 +573,7 @@
                                         </a>
                                   </div>
                               </div>
-                    </div>
+                    </div>-->
                  <div class="container-fluid p-4">
                     <div class="left">
                     <a class="profile">
@@ -586,19 +586,19 @@
 
           <div class="sidebar">
             <a href="../ProfilUser/" class="menu-item">
-                 <span> <i class="fa-solid fa-house-user p-2"></i></span><h3>Accueil</h3>
+                 <span><i class="fa-solid fa-house-user p-2"></i></span><h3>Accueil</h3>
              </a>
              <a href="../listamis/" class="menu-item ">
-                 <span> <i class="fa-solid fa-user p-2"></i></span><h3>Amis</h3>
+                 <span><i class="fa-solid fa-user p-2"></i></span><h3>Amis</h3>
              </a>
-             <a class="menu-item ">
-                 <span>   <i class="fa-sharp fa-solid fa-bookmark p-2"></i></span><h3>Enregistrement</h3>
+             <a  href="../pub_save/"class="menu-item ">
+                 <span><i class="fa-sharp fa-solid fa-bookmark p-2"></i></span><h3>Enregistrement</h3>
              </a>
-             <a class="menu-item ">
+             <a class="menu-item " href="../certificat/">
                  <span><i class="fa-solid fa-certificate p-2"></i></span><h3>Certificat</h3>
              </a>
-             <a  href="../get_all_user/index.php?changer" class="menu-item">
-                <span> <i class="fa-solid fa-user-plus"></i></span><h3>ADD Friend</h3>
+             <a   class="menu-item"  href="../get_all_user/index.php?changer">
+                <span><i class="fa-solid fa-user-plus"></i></span><h3>ADD Friend</h3>
              </a>
           </div>
           </div>
