--- a/layout.phtml
+++ b/layout.phtml
@@ -586,19 +586,19 @@
 
           <div class="sidebar">
             <a href="../ProfilUser/" class="menu-item">
-                 <span><i class="fa-solid fa-house-user p-2"></i></span><h3>Accueil</h3>
+                 <div class="d-flex"><span><i class="fa-solid fa-house-user p-2  "></i></span><h3>Accueil</h3></div>
              </a>
              <a href="../listamis/" class="menu-item ">
-                 <span><i class="fa-solid fa-user p-2"></i></span><h3>Amis</h3>
+                 <div  class="d-flex " ><span><i class="fa-solid fa-user p-2 " ></i></span><h3>Amis</h3></div>
              </a>
              <a  href="../pub_save/"class="menu-item ">
-                 <span><i class="fa-sharp fa-solid fa-bookmark p-2"></i></span><h3>Enregistrement</h3>
+                 <div class="d-flex " ><span><i class="fa-sharp fa-solid fa-bookmark p-2 "></i></span><h3>Enregistrement</h3></div>
              </a>
              <a class="menu-item " href="../certificat/">
-                 <span><i class="fa-solid fa-certificate p-2"></i></span><h3>Certificat</h3>
+                 <div class="d-flex " ><span><i class="fa-solid fa-certificate p-2 "></i></span><h3>Certificat</h3></div>
              </a>
              <a   class="menu-item"  href="../get_all_user/index.php?changer">
-                <span><i class="fa-solid fa-user-plus"></i></span><h3>ADD Friend</h3>
+                <div class="d-flex" ><span><i class="fa-solid fa-user-plus p-2"></i></span><h3>ADD Friend</h3></div>
              </a>
           </div>
           </div>
