--- a/ProfilUser/ProfilUser.phtml
+++ b/ProfilUser/ProfilUser.phtml
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                         <div>
-                        <div class="modal fade" id="exampleModalee<?=$value['id']?>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="delete_pub<?=$value['id']?>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
                                          <div class="modal-content">
                                              <div class="modal-header">
@@ -121,21 +121,45 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                              </div>
                                              <div class="modal-body mx-5" >
-                                                  <div class="user">
-                                                      <div class="profile-photo">
+                                                  <div class="row text-center">
+                                                    <div class="col-lg-12"><b><?=$_SESSION['nameUser']?></b></div>
+                                                    <div class="col-lg-12"> Do you want delete this pub ?</div>
+                                                   
+                                                  </div>
+                                            </div>  
+                                 <div class="modal-footer">
+                                  <div class="float-end">
+                                    <a class="p-2" href="index.php?delete_pub=<?=$value['id']?>"><button type="button" class="btn btn-danger" >Delete</button></a>
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Close</button>
+                                    </div>
+                                 </div>
+                                 </div>
+                                 </div>
+                             </div>
+                        <div class="modal fade" id="exampleModalee<?=$value['id']?>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                         <div class="modal-content">
+                                             <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Edit Your Pub</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                             </div>
+                                             <div class="modal-body mx-5" >
+                                                  <div class="user d-flex justify-content-center">
+                                                    <div class="row text-center mb-5">
+                                                      <div class="profile-photo col-lg-12">
                                                              <img class="rounded" src="..<?=$value['photo_user']?>"  width="70px" height="70px" alt="">
                                                       </div>
-                                                      <div class="ingo">
+                                                      <div class="ingo col-lg-12">
                                                           <h3><?=$value['name']?></h3>
-                                                          <small><?=$value['date']?></small>
+                                                      </div>
                                                       </div>
                                                   </div>
-                                              <form action="index.php" method="Post" enctype="multipart/form-data">
+                                              <form  action="index.php" method="Post" enctype="multipart/form-data">
                                                 
                                               <input type="hidden" name="idpub" value="<?=$value['id']?>">
-                                              <input type="text" name="color_edit" id="color_edit" value="<?=!isset($color_edit) ? $value['theme'] : $color_edit?>">
+                                              <input type="hidden" name="color_edit" id="color_edit" value="<?=!isset($color_edit) ? $value['theme'] : $color_edit?>">
                                                 <div class="row mb-2 container">
-                                                  <div class="col-md-4 mt-2 mb-2">
+                                                  <div class="col-lg-4">
                                                   <p>Theme :</p>
                                                     <div class="theme d-flex justify-content-center mb-2">
                                                         <span class="color-circle color1">
@@ -153,19 +177,21 @@
                                                   <div class="col-lg-4">
                                                      <input class="form-control" type="text" name="desc" id="id_desc" value="<?=$value['description']?>">
                                                   </div>
-                                                  <div class="col-lg-4 mt-2">
+                                                  <div class="col-lg-4">
                                                       <?php if($value['avatar']!=''): ?>
-                                                        <input type="text" name="color_edite" id="color_avatar" value="<?=!isset($color_edit) ? $value['theme'] : $color_edit?>">
+                                                        <input type="hidden" name="color_edite" id="color_avatar" value="<?=!isset($color_edit) ? $value['theme'] : $color_edit?>">
                                                         <div class="photo">
                                                               <div>
                                                                   <img src="<?=$value['avatar']?>"   alt="">
                                                               </div>
                                                         </div>
                                                       <?php endif; ?>
-                                                      <input class="form-control mt-2" type="file" name="avatar" >
+                                                      <input class="form-control" type="file" name="avatar" >
                                                   </div>
                                               </div>
-                                              <button class="btn btn-warning" name="edit">Edit</button>
+                                              <div class="text-center">
+                                                  <button class="btn btn-outline-warning" name="edit">Edit</button>
+                                              </div>
                                               </form>
                                             </div>
                                        </div>
@@ -173,8 +199,8 @@
                              </div>
                             <?php if( $value['iduser']==$_SESSION['idUser'] ): ?>
                               <div class="reglage_pub">
-                                <span data-bs-toggle="modal" data-bs-target="#exampleModalee<?=$value['id']?>" class="edit">edit<i class="fa-brands fa-github"></i></span> 
-                                <span class="edit px-2">X<i class="fa-brands fa-github"></i></span> 
+                                <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#exampleModalee<?=$value['id']?>"><i class="fa-solid fa-pen-to-square text-warning"></i></span> 
+                                <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_pub<?=$value['id']?>" class=" px-2"><i class="fa-solid fa-trash text-danger"></i></span> 
                               </div>
                             <?php endif; ?>
                         </div> 
@@ -194,42 +220,63 @@
                           <form action="index.php" method="POST">
                               <input type="hidden" name="idpub" value="<?=$value['id']?>">
                               <input type="hidden" name="id_user" value="<?=$value['id_user']?>">
-                              <?php $name=$pub->name_user_like_pub($value['id']) ?>
-                              <?php $verified=$pub->get_user_liked($_SESSION['idUser'],$value['id']); ?>
-                              <?php $check_verified=isset($verified) ? 1 : 0 ?>
+                              <?php $verify=$pub->get_user_liked($_SESSION['idUser'],$value['id']);?>
                               <?php $nombre=$pub->somme_like($value['id']); ?>
-                              <button class="btn btn-primary" type="submit" name="like"><i class="<?= $check_verified==0 ? 'fa-regular' : 'fa-solid '?> fa-thumbs-up px-2"></i><?= $nombre ?></button> 
+                              <button class="btn btn-primary" type="submit" name="like"><i class="<?= $verify==false ? 'fa-regular fa-thumbs-up px-2' : 'fa-solid fa-thumbs-up px-2 '?> "></i><?= !$nombre ? '':$nombre ?></button> 
                           </form>
                            
                         </div>
                         <div class="comments">
-                            comments_icon
+                            <i   id="comment_btn" class="fa-solid fa-comment "></i>
                         </div>
                         <div class="enregistrer">
-                        <form action="index.php" method="POST">
+                        <form  action="index.php" method="POST">
                             <input type="hidden" name="idpub" value="<?=$value['id']?>">
-                            <?php $verified= $pub->get_pub_byiduser_idpub($_SESSION['idUser'],$value['id']); ?>
-                            <button name="save_pub"><?= $verified ? 'déja' : 'Add ' ?></button>
-                        </form>
+                            <?php    $verified = $pub->get_pub_byiduser_idpub($_SESSION['idUser'],$value['id']); ?>
+                            <button class="btn btn-info"  name="save_pub"><i class="<?= $verified==false ? 'fa-regular fa-bookmark' : 'fa-sharp fa-solid fa-bookmark'?>" ></i></button>
+                        </form> 
                         </div>
                       </div>
                       <div class="liked-by">
+                              <?php $name=$pub->name_user_like_pub($value['id']) ?>
                                <?php foreach( $pub->get_user_liked_pub($value['id']) as $value) : ?>
                                  <span><img src="..<?=$value['photo_user']?>" width="70px" height="70px" alt=""></span>
                                <?php endforeach; ?>
                                 <p> <?= isset($name['name']) ? '<b>Like by</b> '.$name['name'] : '' ?>  </b> <?= $nombre > 2  ? 'and '. $nombre .' others' : '' ?> </p> 
-                            </div>
+                     </div>
+                     <div class="all_comments">
+                      <div class="card">
+                         <div class="card-header">
+                          <form action="index.php" method="POST">
+                               <input type="hidden" name="pub" value="<?=$value['id']?>">
+                               <textarea name="comment"  cols="2" rows="2"></textarea>
+                               <button name="add_comment">Send</button>
+                            </form>
+                         </div>
+                         <div class="card-body">
+                                <div>
+                                    <?php  ?>
+                                </div>
+                         </div>
+                      </div>
+                     </div>
                     </div>
                 </div>
                 <?php endif; ?>
                 <?php endforeach; ?>
 
     <script>
+        let comments = document.querySelector(".all_comments");
+        let comment_btn = document.querySelector("#comment_btn");
+            comment_btn.addEventListener("click",function(){
+              comments.classList.toggle("active");
+   })
+       /**:) Finally*/
                 let text=document.querySelector(".textarea");
                 let desc=document.querySelector("#id_desc"); 
                 let color_changer=document.querySelector("#color");
                 let color_circle=document.querySelectorAll('.color-circle');
-                let color_edit=document?.querySelector('#color_edit');
+                let color_edit=document.querySelector('#color_edit');
                 let color_avatar=document.querySelector('#color_avatar');
                 color_circle.forEach(color_current=>{
                  color_current.addEventListener('click',function(){
@@ -240,23 +287,23 @@
                        choice=color.substr(18,1);
                       if(choice==3){
                           color_changer.value="#2696E8";
-                          color_edit.value="#2696E8";
                           text.style.backgroundColor="#2696E8";
                           desc.style.backgroundColor="#2696E8";
                           color_avatar.value="#2696E8";
+                          color_edit.value="#2696E8";
                       }
                        else if(choice==2){
                           color_changer.value="#ff2d75";
-                          color_avatar.value="#ff2d75";
-                          color_edit.value="#ff2d75";
-                          desc.style.backgroundColor="#ff2d75";
                           text.style.backgroundColor="#ff2d75";
-                       }else if(choice==1){
-                          color_avatar.value="#fff";
+                          desc.style.backgroundColor="#ff2d75";
+                          color_edit.value="#ff2d75";
+                          color_avatar.value="#ff2d75";
+                       }else if(choice==1){  
                           color_changer.value="#fff";
-                          desc.style.backgroundColor="#fff";
-                          color_edit.value="#fff";
                           text.style.backgroundColor="#fff";
+                          desc.style.backgroundColor="#fff";
+                          color_avatar.value="#fff";
+                          color_edit.value="#fff";
                        }
                    })
                 })
@@ -276,6 +323,8 @@ function showSlides() {
   slides[slideIndex-1].style.display = "block";
   setTimeout(showSlides, 2000); 
 }
+
+
 
 </script>
 
