--- a/layout.phtml
+++ b/layout.phtml
@@ -14,27 +14,29 @@
       <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-      <!--<script src="../../assets/js/bootstrap.js"></script>
-      <script src="../../assets/js/bootstrap.min.js"></script>
+     
+      <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+      <script src="../assets/vendor/aos/aos.js"></script>
+
       <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-      <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+      <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <?php endif; ?>
     <?php if(isset($_SESSION['id' ]) || isset($_SESSION['idUser'])): ?>
       <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="../assets/css/style.css">
-      <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <script src="../assets/js/script.js"></script>
-      <script src="../assets/vendor/aos/aos.js"></script>
-      <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-      <script src="../assets/js/bootstrap.js"></script>
-      <script src="../assets/js/bootstrap.min.js"></script>
+ 
       <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="../assets/js/script.js"></script>
+     
+        <script src="../assets/vendor/aos/aos.js"></script>
+      <!--
+      <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-      <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+      <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
+      <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>-->
     <?php else: ?>
       <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/style.css">
@@ -43,16 +45,17 @@
       <script src="./assets/js/script.js"></script>
       <script src="./assets/vendor/aos/aos.js"></script>
       <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
-      <script src="./assets/js/bootstrap.js"></script>
-      <script src="./assets/js/bootstrap.min.js"></script>
+
       <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+      <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>-->
       <?php endif; ?>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    
+      
+      <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
     <title><?=$page_titel?></title>
 </head>
 <body >
@@ -430,7 +433,7 @@
       
         <h3 class="fw-bolder text-center"  data-aos="fade-down" data-aos-delay="400">I’m so grateful for your help. Thank you 🤍</h3>
         <div class="row container-fluid justify-content-center gap-5 py-4" data-aos="fade-down" data-aos-delay="500">
-        <div class="container_box col-lg-5">
+    <div class="container_box col-lg-5">
         <div class="card_box">
             <img src="./assets/image/chlendi.jpg" alt="">
         </div>
@@ -513,7 +516,6 @@
    <?php endif;?>
 
    <?php if(isset($_SESSION['idUser']) && !$show && !isset($_SESSION['id'])):?>
-
                <article>
                <?php
                 // include "./classes/classes.php";
@@ -608,7 +610,7 @@
                     <div class="right">
                         <?php  
                         if(!isset($_GET['changer'])){
-                            include "../get_all_user/index.php"  ;
+                            include "../get_all_user/index.php";
                         }            
                          ?>
                     </div>
@@ -721,6 +723,7 @@
     
 </body>
 <script>
+  
 let mode=document.querySelector('#mode')?.value;
 let checkUser=document.querySelector('#checkUser')?.value;
 let navbar=document.querySelector('.navbar_user');
@@ -751,6 +754,7 @@ link_sidebar.forEach(link=>{
 <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+
 <script lang="js">
 const popover = new bootstrap.Popover('.popover-dismiss', {
   trigger: 'focus'
