--- a/certificat/certificat.phtml
+++ b/certificat/certificat.phtml
@@ -1,1 +1,82 @@
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, atque!
+
+
+ <style>
+    
+.box_certificat{
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  height: 100%;
+ /* background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;*/
+  padding: 50px 30px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.85s;
+  font-size: 18px;
+}
+
+.box_certificat.certif1,.box_certificat.certif4{
+    background-image:url(../assets/image/logo_final.png);
+
+}
+
+.box_certificat.certif2,.box_certificat.certif3{
+    background-image:url(../assets/image/logo_final.png);
+    background-position: bottom;
+}
+
+ </style>
+
+ <h2 class="text-center" id="text">Certificat Disponible</h2>
+
+ <div class="row container mt-5 mb-5">
+
+  <div class=" col-lg-6 mb-2 text-center">
+     <div class="box_certificat certif1">
+         <div class="img ">
+             <img src="../assets/image/html-5-logo-svgrepo-com.svg" width="90px" height="90px" alt="">
+            <div class="mt-5">
+              <button class="button"><a  class="text-dark" href="./html/">Test</a></button>
+            </div>
+         </div>
+     </div>
+  </div>
+
+  <div class=" col-lg-6 mb-2   text-center">
+     <div class="box_certificat certif2">
+         <div class="img ">
+             <img src="../assets/image/css-3-logo-svgrepo-com.svg" width="90px" height="90px" alt="">
+            <div class="mt-5">
+              <button class="button"><a  class="text-dark" href="./css/">Test</a></button>
+            </div>
+         </div>
+     </div>
+  </div>
+
+  <div class="col-lg-6 mb-2  text-center">
+    <div class="box_certificat certif3">
+         <div class="img ">
+             <img src="../assets/image/js-official-svgrepo-com.svg" width="90px" height="90px" alt="">
+            <div class="mt-5">
+              <button class="button"> <a  class="text-dark" href="./js/">Test</a></button>
+            </div>
+         </div>
+     </div>
+  </div>
+
+  <div class=" col-lg-6 mb-2  text-center">
+     <div class="box_certificat certif4">
+         <div class="img ">
+             <img src="../assets/image/php-svgrepo-com.svg" width="90px" height="90px" alt="">
+            <div class="mt-5">
+              <button class="button"> <a class="text-dark" href="./php/">Test</a></button>
+            </div>
+         </div>
+     </div>
+  </div>
+
+  </div>
+
+
