--- a/layout.phtml
+++ b/layout.phtml
@@ -14,10 +14,8 @@
       <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-     
       <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-      <script src="../assets/vendor/aos/aos.js"></script>
-
+      <script src="../assets/vendor/aos/aos.js"></script>s
       <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <?php endif; ?>
@@ -25,42 +23,36 @@
       <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="../assets/css/style.css">
       <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
- 
       <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="../assets/js/script.js"></script>
-     
-        <script src="../assets/vendor/aos/aos.js"></script>
+      <script src="../assets/vendor/aos/aos.js"></script>
       <!--
       <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-      <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
-      <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>-->
+      <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+      -->
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <?php else: ?>
       <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/style.css">
       <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
       <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <script src="./assets/js/script.js"></script>
       <script src="./assets/vendor/aos/aos.js"></script>
       <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
-
       <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
       <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
       <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-      <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>-->
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
       <?php endif; ?>
-    
-      
-      <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title><?=$page_titel?></title>
 </head>
 <body >
  
-
  <?php if(!isset($_SESSION['id']) && !isset($_SESSION['idUser']) && !$show): ?>
   
   <div class="preloader" >
@@ -103,10 +95,13 @@
                 </button>
                 <div  class="collapse navbar-collapse justify-content-center mx-5" id="navbarResponsive">
                     <ul class="navbar-nav text-center  p-2">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="#service">Portfolio</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="#service"><?=$lang['titel']?></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="#service">Service</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="#contact_us">Contact</a></li>
-                    </ul>
+                        <li><a   class="nav-item mx-0 mx-lg-1" href="changer_langue.php?lang=en">anglais</a></li>
+                        <li><a  class="nav-item mx-0 mx-lg-1" href="changer_langue.php?lang=fr">francais</a></li>
+                        <li><a  class="nav-item mx-0 mx-lg-1" href="changer_langue.php?lang=ar">arabic</a></li>
+                      </ul>
                 </div>
             </div>
         </nav>
@@ -515,8 +510,9 @@
 
    <?php endif;?>
 
-   <?php if(isset($_SESSION['idUser']) && !$show && !isset($_SESSION['id'])):?>
+   <?php if( isset($_SESSION['idUser']) && !$show && !isset($_SESSION['id'])):?>
                <article>
+
                <?php
                 // include "./classes/classes.php";
                  $user=new user_manager();
@@ -541,7 +537,7 @@
                          
                              </div>
                              <div class="mt-4">
-                                <a href="#" class="text-decoration-none text-dark"> <i  style="font-size:25px" id="text"  class="fa-solid fa-message"></i></a> 
+                                <a href="../chat" class="text-decoration-none text-dark"> ss<i  style="font-size:25px" id="text"  class="fa-solid fa-message"></i></a> 
                              </div>
                             <div class="d-flex flex-column text-center ">
                                  <div class="show_profil"> <img  onclick="toasty('profil')" class=" rounded-circle img-thumbnail shadow-sm"  width="60px" height="60px" src="..<?=$_SESSION['avatarUser']?>" > </div>
@@ -550,32 +546,7 @@
               </div>
   
               <main>
-              <!--<button type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" class=" btn_menu"   >Menu</button>
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                            <div class="offcanvas-header">
-                              <h5 id="offcanvasRightLabel">Menu</h5>
-                              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                            </div>
-                               <div class="offcanvas-body">
-                                   <div class="sidebar_small">
-                                        <a href="../ProfilUser/" class="menu-item">
-                                         <span> <i class="fa-solid fa-house-user p-2"></i></span><h3>Accueil</h3>
-                                        </a>
-                                        <a href="../listamis/" class="menu-item ">
-                                            <span> <i class="fa-solid fa-user p-2"></i></span><h3>Amis</h3>
-                                        </a>
-                                        <a class="menu-item ">
-                                            <span><i class="fa-sharp fa-solid fa-bookmark p-2"></i></span><h3>Enregistrement</h3>
-                                        </a>
-                                        <a class="menu-item ">
-                                            <span><i class="fa-solid fa-certificate p-2"></i></span><h3>Certificat</h3>
-                                        </a>
-                                        <a class="menu-item"  href="../get_all_user/index.php?changer" >
-                                           <span> <i class="fa-solid fa-user-plus p-2"></i></span><h3>ADD Friend</h3>
-                                        </a>
-                                  </div>
-                              </div>
-                    </div>-->
+            
                  <div class="container-fluid p-4">
                     <div class="left">
                     <a class="profile">
@@ -751,9 +722,11 @@ link_sidebar.forEach(link=>{
   
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
 <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="./assets/js/script.js"></script>
 
 <script lang="js">
 const popover = new bootstrap.Popover('.popover-dismiss', {
