--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1308,6 +1308,7 @@ form textarea{
 
   .left .sidebar i{
     font-size: 15px;
+    z-index: 9999999999999999;
   }
 
   .middle .feed .decription {
