--- a/layout.phtml
+++ b/layout.phtml
@@ -93,7 +93,7 @@
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary  text-primary rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <i style="color:#4fc3dc" class="fas fa-bars"></i>
                 </button>
-                <div  class="collapse navbar-collapse justify-content-center mx-5" id="navbarResponsive">
+                <div  class="collapse navbar-collapse justify-content-end mx-5" id="navbarResponsive">
                     <ul class="navbar-nav text-center  p-2">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="#service"><?=$lang['titel']?></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="#service">Service</a></li>
@@ -379,7 +379,7 @@
                         <div class="col-sm-6 text-center">
                               <div class="row text-center">
                                 <div class="col-md-12 d-lg-block d-none text-center mb-5">
-                                  <img id="image_contact" width="200px" height="200px"  src="./assets/image/leisure _ relax, chill, sitting, drink, beverage, home, armchair, furniture, plant, decoration@2x.png" alt="">
+                                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_isbiybfh.json" data-aos="zoom-out" data-aos-delay="50"   speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
                                 </div>
                                 <div class="col-md-12 text-center">
                                      <div class="row mb-3 ">
@@ -515,9 +515,9 @@
 
                <?php
                 // include "./classes/classes.php";
-                 $user=new user_manager();
-                 $all_notif=$user->get_notif($_SESSION['idUser']); 
-                 $length_notif=$user->lenght_notif($_SESSION['idUser']);
+                   $user=new user_manager();
+                   $all_notif=$user->get_notif($_SESSION['idUser']); 
+                   $length_notif=$user->lenght_notif($_SESSION['idUser']);
                  ?>
                 <input type="hidden" id="checkUser" value="<?=isset($_SESSION['idUser']) ? 1 : 0?>">
                 <div class="navbar_user position-fixed p-2 mb-5 fixed-top shadow-lg container-fluid d-flex justify-content-between">
