--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1055,6 +1055,10 @@ form textarea{
   border-radius: 5px;
 }
 
+/** lisr amis */
+
+
+
 @media screen and (max-width:1200px) {
 
   .container-fluid{
