--- a/layout.phtml
+++ b/layout.phtml
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <?php if($show==true): ?>
-      <link rel="stylesheet" href="../../assets/css/style.css">
-      <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
+       <link rel="stylesheet" href="../../assets/css/style.css">
+       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
       <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
        <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
       <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -20,34 +19,34 @@
       <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <?php endif; ?>
     <?php if(isset($_SESSION['id' ]) || isset($_SESSION['idUser'])): ?>
-      <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">
+     
       <link rel="stylesheet" href="../assets/css/style.css">
+      <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">  
       <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+      <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+      <script src="../assets/js/script.js"></script>
+      <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+      <script src="../assets/vendor/aos/aos.js"></script>
+      <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
       <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="../assets/js/script.js"></script>
-      <script src="../assets/vendor/aos/aos.js"></script>
-      <!--
-      <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-      <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-      <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-      <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-      -->
-      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <?php else: ?>
-      <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">
+    
+      <?php else: ?>
       <link rel="stylesheet" href="./assets/css/style.css">
-      <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
+      <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">  
       <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
+      <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+      <script src="./assets/js/script.js"></script>
+      <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
       <script src="./assets/vendor/aos/aos.js"></script>
       <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
       <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
       <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-      <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-      <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-      <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+      <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
       <?php endif; ?>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title><?=$page_titel?></title>
 </head>
@@ -511,8 +510,7 @@
    <?php endif;?>
 
    <?php if( isset($_SESSION['idUser']) && !$show && !isset($_SESSION['id'])):?>
-               <article>
-
+           <article>
                <?php
                 // include "./classes/classes.php";
                    $user=new user_manager();
@@ -537,7 +535,7 @@
                          
                              </div>
                              <div class="mt-4">
-                                <a href="../chat" class="text-decoration-none text-dark"> ss<i  style="font-size:25px" id="text"  class="fa-solid fa-message"></i></a> 
+                                <a href="../chat" class="text-decoration-none text-dark"><i  style="font-size:25px" id="text"  class="fa-solid fa-message"></i></a> 
                              </div>
                             <div class="d-flex flex-column text-center ">
                                  <div class="show_profil"> <img  onclick="toasty('profil')" class=" rounded-circle img-thumbnail shadow-sm"  width="60px" height="60px" src="..<?=$_SESSION['avatarUser']?>" > </div>
@@ -690,7 +688,6 @@
     <?php if($show): ?>
          <?php include $template.".phtml"; ?>
     <?php endif; ?>
-
     
 </body>
 <script>
@@ -719,19 +716,7 @@ link_sidebar.forEach(link=>{
     })
 })
 
-  
 </script>
-
-<script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+<script src="jquery-3.6.1.min.js"></script>
 <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-<script src="./assets/js/script.js"></script>
-
-<script lang="js">
-const popover = new bootstrap.Popover('.popover-dismiss', {
-  trigger: 'focus'
-})
-  </script>
-
 </html>
